--- a/RTBWIT/index.html
+++ b/RTBWIT/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1 class="firstHeader"> First Heading</h1>
-<p>Majoring in IST at PSU.</p>
+<p class="firstParagraph"> Majoring in IST at PSU.</p>
 
 </body>
 </html>
