--- a/RTBWIT/index.html
+++ b/RTBWIT/index.html
@@ -8,6 +8,7 @@
 
 <h1 class="firstHeader"> First Heading</h1>
 <p class="firstParagraph"> Majoring in IST at PSU.</p>
+<img class="pic" src="Penn State Logo .png" alt="Logo of the Penn State Nittnay Lion.">
 
 </body>
 </html>
